--- a/hostel.html
+++ b/hostel.html
@@ -1677,7 +1677,7 @@
                     href="imghostel/anwesha8.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Verve (Cultural Night)"
+                    data-title="Syngphony (Cultural Night)"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1699,7 +1699,7 @@
                   href="imghostel/anwesha9.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Verve (Cultural Night)"
+                  data-title="Raghu Dixit (Band Night)"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1716,19 +1716,41 @@
               data-wow-delay="0.2s">
               <div class="gallery-wrap">
                 <figure>
-                  <img src="imghostel/hostelAct-4.jpg" class="img-fluid" alt="" />
+                  <img src="imghostel/codingnight2.jpg" class="img-fluid" alt="" />
                   <a
-                    href="imghostel/hostelAct-4.jpg"
+                    href="imghostel/codingnight2.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Creatives & Designing"
+                    data-title="Coding Night"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Nukkad Natak</h4>
+                  <h4>Coding Night</h4>
+                  <p>HOSTEL ACTIVITIES</p>
+                </div>
+              </div>
+            </div>
+
+          <div class="col-lg-4 col-md-6 gallery-item filter-activities"
+              data-wow-delay="0.2s">
+              <div class="gallery-wrap">
+                <figure>
+                  <img src="imghostel/codingnight3.jpg" class="img-fluid" alt="" />
+                  <a
+                    href="imghostel/codingnight3.jpg"
+                    class="link-preview"
+                    data-lightbox="gallery"
+                    data-title="Coding Night"
+                    title="Preview"
+                    ><i class="ion ion-eye"></i
+                  ></a>
+                </figure>
+
+                <div class="gallery-info">
+                  <h4>Coding Night</h4>
                   <p>HOSTEL ACTIVITIES</p>
                 </div>
               </div>
@@ -1742,7 +1764,7 @@
                     href="imghostel/hostelAct-5.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Plantation Drive"
+                    data-title="Wall Painting"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1766,7 +1788,7 @@
                     href="imghostel/hostelAct-6.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Plantation Drive"
+                    data-title="Tug of War"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1791,7 +1813,7 @@
                     href="imghostel/hostelAct-7.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Plantation Drive"
+                    data-title="Open Mic"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1841,7 +1863,7 @@
                     href="imghostel/hostelAct-1.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Plantation Drive"
+                    data-title="Creatives and Designing"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1932,7 +1954,7 @@
                   href="imghostel/sports6.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Sports"
+                  data-title="Basketball"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1953,7 +1975,7 @@
                   href="imghostel/sports7.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Sports"
+                  data-title="Football"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1977,7 +1999,7 @@
                   href="imghostel/sports8.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Sports"
+                  data-title="Athletics"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1999,7 +2021,7 @@
                   href="imghostel/sports9.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Sports"
+                  data-title="Basketball"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -2021,7 +2043,7 @@
                   href="imghostel/sports1.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Sports"
+                  data-title="Volleyball"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -2042,7 +2064,7 @@
                   href="imghostel/sports2.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Sports"
+                  data-title="Athletics"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -2087,7 +2109,7 @@
                   href="imghostel/sports4.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Sports"
+                  data-title="Basketball"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -2108,7 +2130,7 @@
                   href="imghostel/sports5.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Sports"
+                  data-title="Football"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -2153,7 +2175,7 @@
                   href="imghostel/festival7.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Bonfire"
+                  data-title="Ganesh Chaturthi"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -2175,7 +2197,7 @@
                   href="imghostel/festival8-min.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Reverberance'18"
+                  data-title="Ganesh Chaturthi"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
