Final Commit for Deployment

--- a/hostel_iitp/hostel.html
+++ b/hostel_iitp/hostel.html
@@ -83,7 +83,7 @@
             <li><a href="#studentRepresentatives">Student Representative</a></li>
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#team">Contacts</a></li>
-            <li><a href="#">Reach us</a></li>
+            <li><a href="./reachIITP.html">Reach us</a></li>
 
           </ul>
         </nav>
@@ -700,8 +700,8 @@
                                  <tr>
                                       <td>Shivam Dubey</td>
                                       <td>Maintenance Secretary</td>
-                                      <td>--</td>
-                                      <td>--</td>
+                                      <td>9258310376</td>
+                                      <td>Shivam_1821ch04@iitp.ac.in</td>
                                  </tr>
                                  <tr>
                                       <td>Rishikesh Kumar</td>
@@ -737,32 +737,32 @@
                                   <tr>
                                       <td>Akashdeep Singh</td>
                                       <td>Students' Welfare Secretary</td>
-                                      <td>--</td>
-                                      <td>--</td>
+                                      <td>7307210076</td>
+                                      <td>1812ma05@iitp.ac.in</td>
                                   </tr>
                                  <tr>
                                      <td>Sumit Choudhary</td>
                                      <td>Mess Secretary and M.Tech Representative</td>
-                                     <td>--</td>
-                                     <td>--</td>
+                                     <td>9045615742</td>
+                                     <td>1811ms09@iitp.ac.in</td>
                                  </tr>
                                  <tr>
                                      <td>Rahul Verma</td>
                                      <td>Sports Secretary</td>
-                                     <td>--</td>
-                                     <td>--</td>
+                                     <td>9473994556</td>
+                                     <td>1811ms06@iitp.ac.in</td>
                                  </tr>
                                  <tr>
                                      <td>Kamaljeet Kundu</td>
                                      <td>Secretary, House of Socio Cultural affairs (HOSCA)</td>
-                                     <td>--</td>
-                                     <td>--</a></td>
+                                     <td>9034952135</td>
+                                     <td>1812ch09@iitp.ac.in</td>
                                  </tr>
                                  <tr>
                                       <td>Kundan Singh</td>
                                       <td>Maintenance Secretary</td>
-                                      <td>--</td>
-                                      <td>--</td>
+                                      <td>9473530949</td>
+                                      <td>1811mc06@iitp.ac.in</td>
                                   </tr>
                                   <tr>
                                       <td>Rajeev Raushan</td>
@@ -821,8 +821,8 @@
                                     <tr>
                                         <td>Navin Kumar</td>
                                         <td>Maintenance Secretary</td>
-                                        <td>--</td>
-                                        <td>--</td>
+                                        <td>7633058278</td>
+                                        <td>Navin.me16@iitp.ac.in </td>
                                     </tr>
                                     <tr>
                                         <td>Parth Kulkarni</td>
@@ -1574,8 +1574,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Raghu Dixit (Band Night)</h4>
-                  <p>Anwesha'19</p>
+                  <h4>Raghu Dixit</h4>
+                  <p>Anwesha'19 (Band Night)</p>
                 </div>
               </div>
             </div>
@@ -1596,8 +1596,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>After Acoustics (Band Night)</h4>
-                  <p>Anwesha'19</p>
+                  <h4>After Acoustics</h4>
+                  <p>Anwesha'19 (Band Night)</p>
                 </div>
               </div>
             </div>
@@ -1618,8 +1618,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Heel Turn (Cultural Night)</h4>
-                  <p>Anwesha'19</p>
+                  <h4>Heel Turn</h4>
+                  <p>Anwesha'19 (Cultural Night)</p>
                 </div>
               </div>
             </div>
@@ -1640,8 +1640,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Verve (Cultural Night)</h4>
-                  <p>Anwesha'19</p>
+                  <h4>Verve</h4>
+                  <p>Anwesha'19 (Cultural Night)</p>
                 </div>
               </div>
             </div>
@@ -1662,8 +1662,8 @@
               </figure>
 
               <div class="gallery-info">
-                <h4>Verve (Cultural Night)</h4>
-                <p>Anwesha'19</p>
+                <h4>Verve</h4>
+                <p>Anwesha'19 (Cultural Night)</p>
               </div>
             </div>
           </div>
@@ -1684,8 +1684,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Syngphony (Cultural Night)</h4>
-                  <p>Anwesha'19</p>
+                  <h4>Syngphony</h4>
+                  <p>Anwesha'19 (Cultural Night)</p>
                 </div>
               </div>
             </div>
@@ -1706,8 +1706,8 @@
               </figure>
 
               <div class="gallery-info">
-                <h4>Raghu Dixit (Band Night)</h4>
-                <p>Anwesha'19</p>
+                <h4>Raghu Dixit</h4>
+                <p>Anwesha'19 (Band Night)</p>
               </div>
             </div>
           </div>
@@ -1870,7 +1870,7 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Creatives and Designing</h4>
+                  <h4>Creatives & Designing</h4>
                   <p>HOSTEL ACTIVITIES</p>
                   <!-- <p>Club</p> -->
                 </div>
@@ -2316,7 +2316,7 @@
                                     <br>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="adean_student@iitp.ac.in">
+                                            <a class="social-icon text-xs-center" target="_blank" href="mailto:adean_student@iitp.ac.in">
                                                 <i class="fa fa-envelope"></i>
                                             </a>
                                         </li>
@@ -2353,7 +2353,7 @@
                                     <br>
                                     <ul class="list-inline">
                                         <li class="list-inline-item">
-                                            <a class="social-icon text-xs-center" target="_blank" href="swatantra@iitp.ac.in">
+                                            <a class="social-icon text-xs-center" target="_blank" href="mailto:swatantra@iitp.ac.in">
                                                 <i class="fa fa-envelope"></i>
                                             </a>
                                         </li>
@@ -2394,7 +2394,7 @@
                                       <br>
                                       <ul class="list-inline">
                                           <li class="list-inline-item">
-                                              <a class="social-icon text-xs-center" target="_blank" href="saurabh@iitp.ac.in">
+                                              <a class="social-icon text-xs-center" target="_blank" href="mailto:saurabh@iitp.ac.in">
                                                   <i class="fa fa-envelope"></i>
                                               </a>
                                           </li>
@@ -2431,7 +2431,7 @@
                                         <br>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="sourav@iitp.ac.in">
+                                                <a class="social-icon text-xs-center" target="_blank" href="mailto:sourav@iitp.ac.in">
                                                     <i class="fa fa-envelope"></i>
                                                 </a>
                                             </li>
@@ -2468,7 +2468,7 @@
                                         <br>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="deepu@iitp.ac.in">
+                                                <a class="social-icon text-xs-center" target="_blank" href="mailto:deepu@iitp.ac.in">
                                                     <i class="fa fa-envelope"></i>
                                                 </a>
                                             </li>
@@ -2505,7 +2505,7 @@
                                         <br>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="arghya@iitp.ac.in">
+                                                <a class="social-icon text-xs-center" target="_blank" href="mailto:arghya@iitp.ac.in">
                                                     <i class="fa fa-envelope"></i>
                                                 </a>
                                             </li>
@@ -2542,7 +2542,7 @@
                                         <br>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="pparida@iitp.ac.in">
+                                                <a class="social-icon text-xs-center" target="_blank" href="mailto:pparida@iitp.ac.in">
                                                     <i class="fa fa-envelope"></i>
                                                 </a>
                                             </li>
@@ -2579,7 +2579,7 @@
                                         <br>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="bhooshan@iitp.ac.in">
+                                                <a class="social-icon text-xs-center" target="_blank" href="mailto:bhooshan@iitp.ac.in">
                                                     <i class="fa fa-envelope"></i>
                                                 </a>
                                             </li>
@@ -2616,7 +2616,7 @@
                                         <br>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="nehashah@iitp.ac.in">
+                                                <a class="social-icon text-xs-center" target="_blank" href="mailto:nehashah@iitp.ac.in">
                                                     <i class="fa fa-envelope"></i>
                                                 </a>
                                             </li>
@@ -2653,7 +2653,7 @@
                                         <br>
                                         <ul class="list-inline">
                                             <li class="list-inline-item">
-                                                <a class="social-icon text-xs-center" target="_blank" href="antara@iitp.ac.in">
+                                                <a class="social-icon text-xs-center" target="_blank" href="mailto:antara@iitp.ac.in">
                                                     <i class="fa fa-envelope"></i>
                                                 </a>
                                             </li>
@@ -2808,7 +2808,7 @@
               <br>
               <a href="https://www.iitp.ac.in/"> IIT Patna</a>            
               <br>
-              <a href="https://www.iitp.ac.in/hostel/reachIITP.html"> Reach Us</a>              
+              <a href="./reachIITP.html"> Reach Us</a>              
               <br>
               <a href="https://www.iitp.ac.in/alumni/"> IIT-P AA</a>              
             </div>
