--- a/hostel_iitp/reachIITP.html
+++ b/hostel_iitp/reachIITP.html
@@ -140,6 +140,10 @@
                       IIT Patna has well road connectivity to and from Patna and Ara. Regular bus services have been provided by the Govt. of Bihar from Gandhi Maidan, Patna to IIT Patna campus. IIT Patna runs its own bus services for its students, staffs and faculty members from the campus to Patliputra colony, Patna.
                   </p>
                   <p>
+                    Patna city is connected to Bihta even by the local trains. The Bihta railway station is around 2 km far from the campus. Regular local trains run between Patna junction and Bihta railway station. Danapur railway station is the next nearest railway station after Bihta station. There are scheduled trains from Patna to Bihta and back. The local trains take around 35-40 minutes to cover the distance between the two stations. For detailed information about the schedule of the local trains between Patna and Bihta, open the link given here :
+                    <a style="text-align: center;" href="https://urlzs.com/NVxsH">https://urlzs.com/NVxsH</a>
+                  </p>
+                  <p>
                       The nearest airport to reach IIT Patna campus is Jai Prakash Narayan Domestic Airport, Patna, which is located 5 kilometres southwest of Patna. In addition, the AAI has planned to develop a civil enclave at Bihta Air Force Station, which is only 5 km from IIT Patna campus, to cater to larger aircraft.
                   </p>
                 </div>
