--- a/gymkhana/index.html
+++ b/gymkhana/index.html
@@ -68,7 +68,8 @@
             <li><a href="#clubs">Clubs</a></li>
             <li><a href="#events">Events</a></li>
             <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#team">Office Bearers</a></li>
+            <li><a href="https://piyushchauhan.in/iitp_pages/">Social Links</a></li>
+            <li><a href="officebearers.html">Office Bearers</a></li>
           </ul>
         </nav>
         <!-- #nav-menu-container -->
@@ -1186,372 +1187,6 @@
       </section>
       <!-- #gallery -->
 
-      <!--==========================
-      Team Section
-    ============================-->
-      <section id="team">
-        <div class="container">
-          <header class="section-header">
-            <h1 class="section-title">Office Bearers</h1>
-          </header>
-
-          <div class="nav tabs">
-            <button data-target="#one" class="active">2019-20</button>
-            <button data-target="#two">2018-19</button>
-          </div>
-
-          <div class="2019-20 panel active" id="one">
-            <header class="section-header">
-              <h2 class="section-title">Students' Gymkhana 2019-20</h2>
-              <br>
-            </header>
-            <div class="container-fluid">
-              <h2 class="text-center">Vice President, Students' Gymkhana</h2>
-              <div class="row d-flex justify-content-center">
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2019-20/abhinav-gyan.jpg"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Abhinav Gyan
-                        <span>Vice President, Gymkhana</span>
-                      </h2>
-                      <ul class="social-link">
-                        <li><a href="https://www.facebook.com/theabhinavgyan" class="fa fa-facebook"></a></li>
-                        <li>
-                          <a
-                            href="mailto:abkgyn@gmail.com" class="fa fa-google"></a>
-                        </li>
-                        <li>
-                          <a href="mailto:vpgymkhana@iitp.ac.in" class="fa fa-envelope"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="container-fluid">
-              <h2 class="text-center">Gymkhana Secretaries</h2>
-              <div class="row d-flex justify-content-center">
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="img/team/2019-20/reddi-sai-vamsi.jpg"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Reddi Sai Vamsi
-                        <span>General Secretary, Sports and Games</span>
-                      </h2>
-                      <ul class="social-link">
-                        <li><a href="https://www.facebook.com/vamsi.riki" class="fa fa-facebook"></a></li>
-                        <li>
-                          <a
-                            href="mailto:vamsireddi1998@gmail.com"
-                            class="fa fa-google"
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="mailto:reddi.me16@iitp.ac.in" class="fa fa-envelope"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img src="img/team/2019-20/abhinav-sharma.PNG" alt="Team Image" />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Abhinav Sharma
-                        <span>General Secretary, HoSCA</span>
-                      </h2>
-                      <ul class="social-link">
-                        <li><a href="https://www.facebook.com/abhinav.sharma.79656921" class="fa fa-facebook"></a></li>
-                        <li>
-                          <a
-                            href="mailto:abhinav3706@gmail.com"
-                            class="fa fa-google"
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="mailto:abhinav.ce16@iitp.ac.in " class="fa fa-envelope"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img src="img/team/2019-20/parth-kulkarni (1)-min.jpeg" alt="Team Image" />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Parth Kulkarni
-                        <span>General Secretary,Technical Affairs</span>
-                      </h2>
-                      <ul class="social-link">
-                        <li><a href="https://www.facebook.com/parth.kulkarni.980	" class="fa fa-facebook"></a></li>
-                        <li>
-                          <a
-                            href="mailto:parthpkulkarni.pk@gmail.com"
-                            class="fa fa-google"
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="mailto:kulkarni.cs16@iitp.ac.in" class="fa fa-envelope"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="container-fluid">
-              <h2 class="text-center">Gymkhana Representatives</h2>
-              <div class="row d-flex justify-content-center">
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2019-20/Aswin Krishna.jpg"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Aswin Krishna
-                        <span>UG Representative</span>
-                      </h2>
-                      <ul class="social-link">
-                        <li><a href="https://m.facebook.com/aswin.krishna.7370?ref=bookmarks" class="fa fa-facebook"></a></li>
-                        <li>
-                          <a
-                            href="mailto:krishna.aswin77@gmail.com"
-                            class="fa fa-google"
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="mailto:aswin.cb16@iitp.ac.in" class="fa fa-envelope"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2019-20/sumit choudhary.jpeg"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Sumit Choudhary
-                        <span>Masters' Representative</span>
-                      </h2>
-                      <ul class="social-link">
-                        <li><a href="https://m.facebook.com/sumit.choudharyror?ref=bookmarks" class="fa fa-facebook"></a></li>
-                        <li>
-                          <a
-                            href="mailto:sumitmech2k15@gmail.com"
-                            class="fa fa-google"
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="mailto:1811ms09@iitp.ac.in" class="fa fa-envelope"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2019-20/Kuldeep Awasthi-min2-min.jpg"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Kuldeep Awasthi
-                        <span>Ph.D. Representative</span>
-                      </h2>
-                      <ul class="social-link">
-                        <li><a href="https://www.facebook.com/kuldeep2255	" class="fa fa-facebook"></a></li>
-                        <li>
-                          <a
-                            href="mailto:kuldeep.pme16@iitp.ac.in"
-                            class="fa fa-google"
-                          ></a>
-                        </li>
-                        <li>
-                          <a href="mailto:kuldeep.pme16@iitp.ac.in" class="fa fa-envelope"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="2018-19 panel" id="two">
-            <header class="section-header">
-              <h2 class="section-title">Students' Gymkhana 2018-19</h2>
-              <br>
-            </header>
-            <div class="container-fluid">
-              <h2 class="text-center">Vice President, Students' Gymkhana</h2>
-              <div class="row d-flex justify-content-center">
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2018-19/ashishraj.jpg"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Ashish Raj
-                        <span>Vice President, Gymkhana</span>
-                      </h2>
-                      <ul class="social-link">
-                        <li><a href="https://www.facebook.com/ashish231996" class="fa fa-facebook"></a></li>
-                        <li>
-                          <a href="mailto:ashish.cs15@iitp.ac.in" class="fa fa-envelope"></a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="container-fluid">
-              <h2 class="text-center">Gymkhana Secretaries</h2>
-              <div class="row d-flex justify-content-center">
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2018-19/rishabh-yadav.png"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Rishabh Yadav
-                        <span>General Secretary, Sports and Games</span>
-                      </h2>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2018-19/shubhendu-yadav.JPG"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Shubhendu Yadav
-                        <span>General Secretary, HoSCA</span>
-                      </h2>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2018-19/tarun-garg.jpg"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Tarun Garg
-                        <span>General Secretary,Technical Affairs</span>
-                      </h2>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="container-fluid">
-              <h2 class="text-center">Gymkhana Representatives</h2>
-              <div class="row d-flex justify-content-center">
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2018-19/unknown.png"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Nipoon Gupta
-                        <span>UG Representative</span>
-                      </h2>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2018-19/unknown.png"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Arjun Roy
-                        <span>Masters G Representative</span>
-                      </h2>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                  <div class="profile-card">
-                    <div class="profile-img">
-                      <img
-                        src="./img/team/2018-19/mayank-jha.jpg"
-                        alt="Team Image"
-                      />
-                    </div>
-                    <div class="profile-content">
-                      <h2 class="title">
-                        Arjun Roy
-                        <span>Masters G Representative</span>
-                      </h2>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
 
     <!--==========================
     Footer
